--- a/Express/EJS-Demo/Views/posts.ejs
+++ b/Express/EJS-Demo/Views/posts.ejs
@@ -1,3 +1,17 @@
 <h1>Posts Page</h1>
 
-<%= posts %>
+<%# for loop %>
+<% for(i = 0; i < posts.length; i++){ %>
+ <li>
+  <%= posts[i].title %> - <strong><%= posts[i].author %></strong>
+ </li>
+<% } %>
+
+<%# forEach loop (is a little shorter as we don't n eed to worry about i) %>
+<% posts.forEach(function(post){ %>
+ <li>
+  <%= post.title %> - <strong><%= post.author %></strong>
+ </li>
+<% }) %>
+
+
