--- a/Express/EJS-Demo/Views/home.ejs
+++ b/Express/EJS-Demo/Views/home.ejs
@@ -1,3 +1,6 @@
+<% include partials/Header %>
 <h1>This is the Home page</h1>
 
 <img src="https://poodles2doodles.com/wp-content/uploads/2019/02/Lara-Green2of7-1-768x594.jpg" alt="">
+
+<% include partials/Footer %>
