--- a/Express/EJS-Demo/Views/love.ejs
+++ b/Express/EJS-Demo/Views/love.ejs
@@ -1,4 +1,5 @@
-
+<%# Adds in my header template %>
+<% include partials/Header %>
 <%# This type of brackets will add to the HTML %>
 <h1>You fell in love with: <%= thingVar.toUpperCase() %></h1>
 
@@ -10,3 +11,6 @@
 <% } %>
 
 <p>P.s - This is the love file!</p>
+
+<%# Adds in my footer template %>
+<% include partials/Footer %>
