--- a/RESTful Routes/Restful Blog app/Public/Stylesheets/app.css
+++ b/RESTful Routes/Restful Blog app/Public/Stylesheets/app.css
@@ -1,9 +1,12 @@
-input{
-  /* display: block; */
+input.green:focus{
+  border-color: #21ba45!important;
 }
 i.icon{
   font-size: 1.5em;
 }
 .main.container{
   margin-top: 7.0em;
+}
+.ui.form textarea:focus{
+  border-color: #21ba45;
 }
