--- a/RESTful Routes/Restful Blog app/Views/index.ejs
+++ b/RESTful Routes/Restful Blog app/Views/index.ejs
@@ -8,7 +8,8 @@
       <h2><%= blog.title %></h2>
       <span><%= blog.created %></span>
       <img src="<%= blog.image %> " alt="">  
-      <p><%= blog.body %></p>
+      <p><%= blog.body.substring(0, 100) %>...</p>
+      <a href="/blogs/<%= blog._id %> ">Read More!</a>
     </div>
   <% }) %>
   </div>
