--- a/RESTful Routes/Restful Blog app/Views/new.ejs
+++ b/RESTful Routes/Restful Blog app/Views/new.ejs
@@ -13,7 +13,7 @@
     </div>
     <div class="field">
       <label for="">Body Content</label>
-      <textarea name="blog[body]" id="" cols="30" rows="10"></textarea>
+      <textarea name="blog[body]" id="" cols="30" rows="10" required></textarea>
     </div>
     <input class="ui green basic button" type="submit">
   </form>
