--- a/RESTful Routes/Restful Blog app/Views/show.ejs
+++ b/RESTful Routes/Restful Blog app/Views/show.ejs
@@ -13,8 +13,10 @@
       <div class="description">
         <p><%= blog.body %></p>
       </div>
-        <button class="ui yellow basic button">Edit</button>
-        <form action="/blogs<%= blog._id %>?_method=DELETE" method="POST">
+        <form id="delete" action="/blogs/<%= blog._id %>/edit"> 
+          <button class="ui yellow basic button">Edit</button>
+        </form>
+        <form id="delete" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST">
           <button class="ui red basic button">Delete</button>
         </form>    
         
