--- a/RESTful Routes/Restful Blog app/Views/index.ejs
+++ b/RESTful Routes/Restful Blog app/Views/index.ejs
@@ -1,17 +1,36 @@
 <%- include ("Partials/headers") %> 
 
-<div class="main container">
-  <h1>Index Page!!</h1>
-
-  <% blogs.forEach(blog => { %>
-    <div>
-      <h2><%= blog.title %></h2>
-      <span><%= blog.created %></span>
-      <img src="<%= blog.image %> " alt="">  
-      <p><%= blog.body.substring(0, 100) %>...</p>
-      <a href="/blogs/<%= blog._id %> ">Read More!</a>
-    </div>
-  <% }) %>
+<div class="ui text main container">
+  <div class="ui huge header">
+    <h1>RESTful Blog App</h1>
   </div>
+  <div class="ui top attached segment">
+    <div class="ui divided items">
+      <% blogs.forEach(blog => { %>
+        <div class="item">
+           <div class="image">
+             <img src="<%= blog.image %> " alt="">
+           </div>
+           <div class="content">
+             <a href="/blogs/<%= blog._id %>" class="header"><%= blog.title %></a>
+             <div class="meta">
+               <span><%= blog.created %></span>
+             </div>
+             <div class="description">
+               <p><%- blog.body.substring(0, 100) %>...</p>
+             </div>
+             <div class="extra">
+              <a class="ui floated small basic violet button" href="/blogs/<%= blog._id %> ">Read More!
+              <i class="right chevron icon"></i>
+              </a>
+             </div>
+           </div>
+          </div>       
+      <% }) %>
+    </div>
+  </div>
+</div>
+
+
 <%- include ("Partials/footers") %> 
 
