--- a/RESTful Routes/Restful Blog app/Views/index.ejs
+++ b/RESTful Routes/Restful Blog app/Views/index.ejs
@@ -14,7 +14,7 @@
            <div class="content">
              <a href="/blogs/<%= blog._id %>" class="header"><%= blog.title %></a>
              <div class="meta">
-               <span><%= blog.created %></span>
+               <span><%= blog.created.toDateString() %></span>
              </div>
              <div class="description">
                <p><%- blog.body.substring(0, 100) %>...</p>
